# Cells_Project

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Cell.cpp  Cell.h  Cells_Project.pro  Formula.cpp  Formula.h  FormulaMax.cpp  FormulaMax.h  FormulaMean.cpp  FormulaMean.h  FormulaMin.cpp  FormulaMin.h  FormulaSum.cpp  FormulaSum.h  Observer.h  Subject.h  Table.cpp  Table.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
build-Cells_Project-Desktop_Qt_5_7_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
test/: CMakeLists.txt  CalculatorTest.h  CellTest.h  FormulaMaxTests.h  FormuleTest.h  runAllTests.cpp
